finally fix the offset

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <div id="all">
-  <div class="container-fluid" id="stuff">
+  <div class="container-fluid span11" id="stuff">
   <div id="myCarousel" class="carousel slide">
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
