morning announcements stream

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
             <li id="nav_classes"><%= link_to "Classes", classes_path %> </li>
   					<li id="nav_sports"><%= link_to "Sports", sports_path %></li>
   					<li id="nav_clubs"><%= link_to "Clubs", clubs_path %></li>
-            <li id="nav_video"><%= link_to "Videos", livestreams_path %></li>
+            <li id="nav_anounce"><a href="/morning_announcements">Morning Announcements</a></li>
             <div class="visible-phone">
             <% if signed_in? %>
               <% if current_user.superuser == true %>
