Purged MOST old styling and added Material

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,326 +1,7 @@
 /*
- *= require bootstrap.min
- *= require bootstrap-responsive.min
+ *= require material
+ *= require material_style
  *= require_self
  */
 
-
-// Imports
-@import 'bourbon';
-@import "compass/layout/sticky-footer";
-@import 'compass/css3/pie';
-@import 'variables';
-@import 'mixins';
-@import 'overrides';
-
-$pie-behavior: url("/assets/PIE.htc");
-$pie-base-class: pie-element;
-
-.pie-element {
-  @include pie-element(relative);
-}
-
-// Includes
-@include sticky-footer(200px, "#footer");
-
-// Styles
-
-html, body {
-	height: 100%;
-	padding: {
-		top: 0px;
-		bottom: 0px;
-		left: 0px;
-		right: 0px;
-	}
-	margin: {
-		top: 0px;
-		bottom: 0px;
-		left: 0px;
-		right: 0px;
-	}
-}
-	
-body {
-	@include backgroundNoise;
-	background: {
-		color: #f3f3f3 !important;
-	}
-}
-
-a {
-  color: $darkGreen;
-  &:hover {
-    color: $lightGreen;
-  }
-}
-
-#content {
-	min-height: 100%;
-	margin: {
-		bottom: -200px;
-	}
-	clear: both;
-}
-
-.navbar-static-top {
-  #user-nav-box {
-    width: 320px;
-    .controls {
-      margin: {
-        left: 60px;
-      }
-    }
-    .control-label {
-      padding: {
-        right: 8px;
-      }
-      width: 80px;
-      &:after {
-        content: ":";
-      }
-    }
-    .btn {
-      display: block;
-      margin: {
-        left: auto;
-        right: auto;
-      }
-    }
-    .link {
-      width: 100%;
-      text-align: center;
-      a {
-        color: 	$lightGreen !important;
-    	}
-    }
-  }
-}
-
-#footer_spacer {
-	height: 200px;
-	clear: both;
-}
-
-#footer {
-	width: 100%;
-	min-height: 200px;
-	background: {
-		color: rgb(70,104,67);
-	}
-	clear: both;
-	border-top: 4px solid #629b63;
-	color: white;
-	h3 {
-		padding-top: 0px;
-	}
-	a {
-  	color: white;
-  	&:hover {
-    	color: white;
-  	}
-	}
-}
-
-.important_links {
-	border: {
-		left: #629b63 solid 2px;
-	}
-	margin: {
-		top: 10px;
-	}
-	padding: {
-		left: 5px;
-	}
-}
-
-#footerTitle {
-	font-size: 1.25em;
-	margin-bottom: 5px;
-	padding: 0;
-	display: block;
-}
-
-.contact {
-	margin-top: 10px;
-	border-left: #629b63 solid 2px;
-	padding-left: 5px;
-}
-
-#twitter-follow-button {
-	margin-bottom: 5px;
-}
-
-.facebook {
-	margin-top: 5px;
-	display: block;
-	background: #e8e8e8;
-	border-radius: 4px;
-	min-width: 225px;
-}
-
-#abt_chrome {
-	width: 400px;
-}
-
-
-#footer_holder {
-	margin-top: 10px;
-}
-
-#edited_by {
-	margin-top: 11px;
-	padding-left: 6px;
-	background: rgb(70,104,67);
-}
-
-#footerTitle {
-	a {
-		text-decoration: none;
-		&:hover {
-			text-decoration: underline !important;
-		}
-	}
-}
-
-#installgcf {
-	display: none;
-}
-
-.nav-avatar {
-  position: relative;
-  top: -1px;
-  height: 18px;
-}
-
-.brand {
-	a {
-		text-shadow: 0 1px 0 #ffffff !important;
-	}
-}
-
-.btn-navbar {
-	background-color: #3e5f3b !important;
-	background-image: none !important;
-}
-
-.navbar .nav li.dropdown.open > .dropdown-toggle,
-.navbar .nav li.dropdown.active > .dropdown-toggle,
-.navbar .nav li.dropdown.open.active > .dropdown-toggle {
-  background-color: $lightGreen !important;
-}
-
-.dropdown-menu li > a,
-.dropdown-submenu > a {
-	color: $darkGreen !important;
-	text-shadow: none !important;
-}
-
-.dropdown-menu {
-	li {
-		a {
-			&:focus {
-				outline: none !important;
-			}
-		}
-	}
-}
-
-.dropdown-menu li > a:hover,
-.dropdown-menu li > a:focus,
-.dropdown-submenu:hover > a {
-	color: white !important;
-}
-
-.caret {
-	border-top-color: white !important;
-	border-bottom-color: white !important;
-}
-
-.btn-primary {
-	color: #FFFFFF;
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-	background-color: #466843;
-	*background-color: #466843;
-	background-image: -moz-linear-gradient(top, #629B62, #466843);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#629B62), to(#466843));
-	background-image: -webkit-linear-gradient(top, #629B62, #466843);
-	background-image: -o-linear-gradient(top, #629B62, #466843);
-	background-image: linear-gradient(to bottom, #629B62, #466843);
-	background-repeat: repeat-x;
-	border-color: #466843;
-	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#629B62', endColorstr='#466843', GradientType=0);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-}
-.btn-primary:hover,
-.btn-primary:active,
-.btn-primary.active,
-.btn-primary.disabled,
-.btn-primary[disabled] {
-	color: #FFFFFF;
-	background-color: #466843;
-	*background-color: #003bb3;
-}
-
-#teampage {
-  background: #fff;
-  padding: 10px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
-  -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18); 
-  border-radius: 5px;
-  text-align: center;
-}
-
-#box {
-  @include box-shadow(0 1px 6px 0px black);
-  border-radius: 6px;
-  background: {
-    color: white;
-  }
-  padding: {
-    top: .5em;
-    bottom: .5em;
-  }
-  margin: {
-    top: 1em;
-  }
-  text-align: center;
-}
-
-#form_box {
-  text-align: left;
-  margin: {
-    left: auto;
-    right: auto;
-  }
-  width: 60%;
-}
-
-#articleview {
-  background: #fff;
-  padding: 10px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
-  -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18); 
-  border-radius: 5px;
-}
-
-.nav-pills > .active > a, .nav-pills > .active > a:hover {
-    background-color: #466843;
-}
-
-.CarouselImg img {
-  width: 100%;
-  height: 338px;
-  max-height: 338px;
-  margin: 0 auto;
-}
 
