--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   
   <%= stylesheet_link_tag "material" %>
   <%= stylesheet_link_tag "material_style" %>
+  <%= yield :css %>
   
   
   <!-- Google Analytics -->
