--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,10 +47,48 @@
     
 		 
 	<%= render 'layouts/footer' %>
+   <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Admin Sign In</h4>
+      <%= form_for(:user, :as => :user, :url => session_path(:user), html: { class: 'form-horizontal', id: 'form-l' }) do |f| %>
+                
+         
+         <div class="input-field">         
+           <%= f.text_field :email %>
+           <label for="user_email">Email Address</label>
+         </div>
+         
+         <div class="input-field">           
+           <%= f.password_field :password  %>
+           <label for="user_password">Password</label>
+         </div>
+                  
+                 
+        <p>No account yet? <%= link_to "Sign up now!", new_user_registration_path %></p> 
+        
+        <% end %>
+              
+    </div>
+    <div class="modal-footer">
+      <a href="#!" onclick="document.getElementById('form-l').submit();" class=" waves-effect waves-green btn-flat">Sign In</a>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
 	<%= javascript_include_tag "materialize" %>
   <%= javascript_include_tag "init" %>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $('.slider').slider({full_width: true});
+      $('ul.tabs').tabs();
+      $('.modal-trigger').leanModal();
+
+    });
+
+  </script>
+
 
 </body>
 </html>
