--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,6 +15,8 @@
             <li><a class="white-text" href="#!">Twitter</a></li>
             <li><a class="white-text" href="#!">Harborfields Website</a></li>
             <li><a class="white-text" href="#!">Bus Finder</a></li>
+            <li><a class="white-text modal-trigger" href="#modal1">Admin Login</a></li>
+
           </ul>
         </div>
       </div>
