--- a/app/views/static_pages/harbingerteam.erb
+++ b/app/views/static_pages/harbingerteam.erb
@@ -14,121 +14,118 @@
 		<b>Web Master:</b> 
 		<p>Jake Dombrower</p>
 
-		<b>Assistant Web Master:</b>
-
-		<p>Connor Stewart</p>
-
+		
 		<b>Content Editors:</b>
-
-		<p>Dylan Bass</p>
-
-		<p>Jake Dombrower</p>
-
-		<p>Christopher Peters</p>
-
-		<p>Eric Peters</p>
-
-		<p>Alexa Prodromakis</p>
-
-		<p>Mia Rodriguez</p>
-
-		<p>Steven Schmidt</p>
-
-		<p>Victoria Walsh</p>
-	</div>
-	<div class="span3">
-		<h4>The Harbinger Newspaper</h4>
-		<b>Print Editor:</b>
-
-		<p>Eric Peters</p>
-
-		<b>Reporters:</b>
 
 		<p>Brianna Ackerman</p>
 
-		<p>Dylan Bass</p>
+		<p>Ryan Ackerman</p>
 
-		<p>Anna Cheng</p>
+		<p>John Canino</p>
 
-		<p>Melissa Cooper</p>
+		<p>Mike Harvey</p>
 
-		<p>Alex Coventry</p>
+		<b>Director of Social Media:</b>
 
-		<p>Jake Dombrower</p>
+		<p>Ryan Ackerman</p>
+	</div>
+	<div class="span3">
+		<h4>The Harbinger Newspaper</h4>
+		<b>Print Layout Editor:</b>
 
-		<p>Dylan Kaufman</p>
+		<p>Brianna Ackerman</p>
 
-		<p>Lacey Kozlowski-Coward</p>
+		<b>Copy Editors:</b>
 
-		<p>Max McGill</p>
+		<p>Brianna Ackerman</p>
+		<p>Cecilia Masselli</p>
 
-		<p>Christopher Peters</p>
+		<b>Reporters:</b>
 
-		<p>Eric Peters</p>
 
-		<p>Alexa Prodromakis</p>
+		<p>Brianna Ackerman</p>
 
-		<p>Mia Rodriguez</p>
+		<p>Haseeb Altaf</p>
 
-		<p>Steven Schmidt</p>
+		<p>Medora Benson</p>
 
-		<p>Alec Walker</p>
+		<p>Jack Blitch</p>
 
-		<p>Victoria Walsh</p>
+		<p>Alex Campbell</p>
+
+		<p>John Canino</p>
+
+		<p>Olivia Cook</p>
+
+		<p>Christiana DeBorja</p>
+
+		<p>Jason Feinberg</p>
+
+		<p>Dan Garvey</p>
+
+		<p>Brian Gerbosi</p>
+
+		<p>Matt Kearney</p>
+
+		<p>Alyssa Mastrantonio</p>
+
+		<p>Katelyn McHale</p>
+
+		<p>Grace Mines</p>
+
+		<p>Bryan Ramme</p>
+
+		<p>Megan Scally</p>
+
+		<p>Jane Schecterson</p>
+
+		<p>Jared Van Houten</p>
+
+		<p>Julian White</p>
 	</div>
 	<div class="span3">
 		<h4>The Harbinger Video Team</h4>
 
-		<b>Live Stream Producer:</b>
+		<b>Live Stream Producers:</b>
 
 		<p> Alex Coventry</p>
 
-		<b>Live Production Team:</b>
+		<p>Doug Terc</p>
 
-		<p>Doug Terc </p>
-
-		<p>Emanuel Bebari</p>
-
-		<p>Jason Clampitt</p>
-
-		<p>Bobby Williamson</p>
-
-		<p>Sydnie Wittenberg</p>
-
-		<p>Rachel Antonison</p>
-
-		<p>Maxwell Land-Messer Manzi</p>
-
-		<b>News Video Producer: </b>
-
-		<p>Max McGill</p>
-
-		<b>Videographers:</b>
-
-		<p>Dylan Bass</p>
-
-		<p>Anna Cheng</p>
-
-		<p>Alex Coventry</p>
-
-		<p>Jake Dombrower</p>
-
-		<p>Dylan Kaufman</p>
-
-		<p>Lacey Kozlowski-Coward</p>
-
-		<p>Max McGill</p>
-
-		<p>Christopher Peters</p>
-
-		<p>Eric Peters</p>
-
-		<p>Alexa Prodromakis</p>
+		<b>Studio Producers:</b>
 
 		<p>Mia Rodriguez</p>
 
-		<p>Steven Schmidt</p>
+		<p>Jared Van Houten</p>
+
+		<b>Play by Play Announcers:</b>
 		
+		<p>Emmanuel Berbari</p>
+
+		<p>Johnny Gadamowitz </p>
+
+		<b>Morning Show Hosts:</b>
+		<p>Flo Chi</p>
+
+		<p>Rachael Glackin</p>
+		<b>Studio and Live Production Team:</b>
+		<p>Ryan Ackerman</p>
+
+		<p>Charlie Barba</p>
+
+		<p>Greg Black</p>
+
+		<p>Antonio Ferme</p>
+
+		<p>Brian Gerbosi</p>
+
+		<p>Dylan Irgang</p>
+
+		<p>Matt Kearney</p>
+
+		<p>Bryan Ramme</p>
+
+		<p>Jared Van Houten</p>
 	</div>
 
 		
